<resources>
    <string name="app_name">롯데 택배</string>
    <string name="app_name_dev">dev_롯데 택배</string>

    <!-- 업데이트 관련   -->
    <string name="newest_version">최신 버전입니다</string>
    <string name="err_internet_connection">인터넷 연결을 확인해주세요</string>
    <string name="update_permission_denied_msg">권한을 승인해야 업데이트가 가능합니다</string>

    <!-- 메인 메뉴  -->
    <string name="menu_terminal">1.터미널</string>
    <string name="menu_agency">2.대리점</string>
    <string name="menu_data">3.자료관리</string>
    <string name="menu_setting">4.환경설정</string>
    <string name="back_press">버튼을 한 번 더 누르면 종료됩니다.</string>

    <!--터미널 설정-->
    <string name="set_terminal">터미널 설정</string>
    <string name="terminal_code">스캔점소 코드</string>
    <string name="employee_num">사원 번호</string>
    <string name="btn_search">검색</string>
    <string name="btn_reset">초기화</string>
    <string name="btn_save">저장</string>

</resources>