<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lotte_primary"
        tools:context=".ui.terminal.UserSettingActivity">

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_terminal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bg_round"/>

        <TextView
            android:id="@+id/bg_round"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="68dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_user_setting" />

        <TextView
            android:id="@+id/label_scan_code"
            style="@style/textLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminal_code"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_round"/>

        <com.jhc.andy_lotte.ui.view.AndyEditText
            android:id="@+id/et_scan_code"
            style="@style/editText"
            android:maxLength="5"
            app:input="Kor"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/label_scan_code"
            app:layout_constraintStart_toStartOf="@id/label_scan_code"
            app:layout_constraintEnd_toEndOf="@id/label_scan_code"/>

        <Button
            style="@style/BoxRightButton"
            android:layout_width="70dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/et_scan_code"
            app:layout_constraintBottom_toBottomOf="@id/et_scan_code"
            app:layout_constraintEnd_toEndOf="@id/et_scan_code"/>
        
        <TextView
            android:id="@+id/tml_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEST코드" 
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/et_scan_code"
            app:layout_constraintStart_toStartOf="@id/et_scan_code"
            app:layout_constraintEnd_toEndOf="@id/et_scan_code"/>

        <TextView
            android:id="@+id/label_emp_code"
            style="@style/textLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_num"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/label_scan_code"
            app:layout_constraintTop_toBottomOf="@id/tml_name"/>

        <com.jhc.andy_lotte.ui.view.AndyEditText
            android:id="@+id/et_emp_code"
            style="@style/editText"
            app:input="Kor"
            android:maxLength="10"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/label_scan_code"
            app:layout_constraintEnd_toEndOf="@id/label_scan_code"
            app:layout_constraintTop_toBottomOf="@id/label_emp_code"/>

        <TextView
            android:id="@+id/emp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEST번호"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/et_emp_code"
            app:layout_constraintStart_toStartOf="@id/et_scan_code"
            app:layout_constraintEnd_toEndOf="@id/et_scan_code"/>

        <Button
            android:id="@+id/btn_reset"
            style="@style/BaseButton"
            android:text="@string/btn_reset"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/bg_round"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emp_name" />

        <Button
            android:id="@+id/btn_save"
            style="@style/BaseButton"
            android:text="@string/btn_save"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_round"
            app:layout_constraintStart_toEndOf="@+id/btn_reset"
            app:layout_constraintTop_toTopOf="@+id/btn_reset" />

        


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>